@@ -1,6 +1,0 @@
-#include 
-#ifndef HASH_NAMESPACE
-#define HASH_NAMESPACE 
-#endif
-using HASH_NAMESPACE::hash_map;
-using HASH_NAMESPACE::hash;
