@@ -247,7 +247,11 @@ int FtpClient::connectDataPort(class ExceptionSink *xsink)
 {
    // get address for interface of control connection
    struct sockaddr_in add;
+#ifdef HPUX
+   int socksize = sizeof(struct sockaddr_in);
+#else
    socklen_t socksize = sizeof(struct sockaddr_in);
+#endif
    
    if (getsockname(control.getSocket(), (struct sockaddr *)&add, &socksize) < 0)
    {
