@@ -2,6 +2,7 @@
 	* HP-UX configure fix in configure.ac
 	* fixed character set names to use only valid aliases on HP-UX
 	* configure updates to allow TIBCO AE SDK to be recognized on HP-UX
+	* HP-UX compile fixes
 
 2006.11.06: David Nichols
 	* replaced obsolete autoconf/automake macros in configure.ac
